--- a/.github/workflows/build-from-dotfiles.yml
+++ b/.github/workflows/build-from-dotfiles.yml
@@ -3,6 +3,8 @@ on: [workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      PLATFORMS: linux/amd64,linux/arm64
     permissions:
       packages: write
     steps:
@@ -12,6 +14,11 @@ jobs:
 
       - name: Sanitise repository owner
         run: echo REPOSITORY_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: all
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -32,6 +39,7 @@ jobs:
             DOTFILES_CACHEBUST=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: ${{ env.PLATFORMS }}
           file: docker/Dockerfile
           push: true
           tags: ghcr.io/${{ env.REPOSITORY_OWNER }}/desktop-environment:latest
