--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,6 +39,8 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
 # Install desktop environment core utilities
 RUN apt-get update -qq && \
   DEBIAN_FRONTEND=noninteractive apt-get install -qq --fix-missing \
+  clang \
+  libclang-dev \
   acpi \
   alsa-utils \
   apt-file \
@@ -242,9 +244,12 @@ RUN git clone https://github.com/fastfetch-cli/fastfetch /opt/fastfetch && \
   install fastfetch /usr/local/bin
 
 # Install fzf
-# RUN curl -fsSL https://github.com/junegunn/fzf/releases/download/v0.55.0/fzf-0.55.0-linux_amd64.tar.gz | \
-#   tar -C /usr/local/bin -xzf - fzf
-
+RUN if [ "$(uname -m)" = "x86_64" ]; then \
+  curl -fsSL https://github.com/junegunn/fzf/releases/download/v0.55.0/fzf-0.55.0-linux_amd64.tar.gz | \
+  tar -C /usr/local/bin -xzf - fzf \
+  else \
+  echo "Unsupported architecture: $(uname -m)" && exit 1; \
+  fi
 # Install gh
 # RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg && \
 #   chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg && \
